create_corpus function

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -23,6 +23,7 @@
    "source": [
     "# Library imports\n",
     "import numpy as np\n",
+    "import gc\n",
     "import torch\n",
     "from transformers import set_seed\n",
     "from transformers import OpenAIGPTLMHeadModel, GPT2LMHeadModel, GPTNeoForCausalLM, TransfoXLLMHeadModel\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
@@ -120,6 +121,7 @@
     "    )\n",
     "    decoded_output = tokenizer.decode(encoded_output[0], skip_special_tokens=True)\n",
     "    print(decoded_output)\n",
+    "    gc.collect()\n",
     "    #TextCorpus.save_corpus(\"./data/corpus-\"+model_name)\n"
    ],
    "metadata": {
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -153,35 +155,35 @@
      "output_type": "stream",
      "text": [
       "EOS: None | BOS: None | UNK: <unk>\n",
-      "hm. priests stole our thirteen - year -\n"
+      "* \n",
+      " four weeks, later \n",
+      " \" do you think that your answer to my proposal would have been the same mrs. fredrick? \" fanny asked in a tone that suggested to phil that she had fun doing such things. they sat near noon at maple terrace's famed dance floor, a large banquet table with a large sprinkling of breads, ripping off smaller chunks of a certain bosom, and passing it back and forth against the lap of a winner, not everyone. phil and julia giggled at the scene\n"
      ]
     }
    ],
    "source": [
-    "create_corpus(1, \"openai-gpt\", 10, OpenAIGPTTokenizer, OpenAIGPTLMHeadModel, device)"
+    "create_corpus(1, \"openai-gpt\", 100, OpenAIGPTTokenizer, OpenAIGPTLMHeadModel, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "EOS: <|endoftext|> | BOS: <|endoftext|> | UNK: <|endoftext|>\n",
-      "Bapa Pinata and Momages Paranormal Journal (February 2018)\n",
+      "University of Iowa President, Anne Gust, was profiled in the January 2015 issue of The New Yorker.\n",
       "\n",
-      "no more scaling up construction and red flag (November 2018)\n",
+      "\"It is a superpower full of ambitions and wounds. And at its heart stands a monument to human folly.\"\n",
       "\n",
-      "sanctioned readmission of redacted website of the National Policy Group Working Group moderated last month\n",
-      "\n",
-      "an online violence website quietly downgraded to a disappeared link to the new shoddy work of the NGP and its 4th re.4 project (;)\n"
+      "For the reasons Taylor Swift's \"Blank Space\" makes me laugh, Iowa, my home state, is one of the smartest places to live in America. But maybe most importantly, it's where tomorrow's industrial winners will emerge—and where they'll get\n"
      ]
     }
    ],
    "source": [
-    "create_corpus(1, \"gpt2\", 100, GPT2Tokenizer, GPT2LMHeadModel, device)"
+    "create_corpus(1, \"gpt2-xl\", 100, GPT2Tokenizer, GPT2LMHeadModel, device)"
    ],
    "metadata": {
     "collapsed": false,
@@ -192,18 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "EOS: <|endoftext|> | BOS: <|endoftext|> | UNK: <|endoftext|>\n",
-      "Producer Lexus\" less\n",
-      "\n",
-      "Cable Network Specials\n",
-      "\n",
-      "After several months spent in the company of game shows like \"The New Price Is Right\" and fellow \"This Old House\" star Barbara Mandrell, \"Desperate Housewives\" Emmy-Award winner Felicity Huffman could be heard throughout \"Carpool Karaoke\" orchestrating a high-stake showdown for her home life. Top \"Modern Family\" actor Jesse Tyler Ferguson blended in one lucky week and\n"
+      "1. Field of the Invention\n",
+      "The present invention relates to a memory element such as a memory device, an absolute type type memory having an absolute difference of the potential of a floating gate, and an analog type memory having a source potential arbitrarily controlled in a dynamic random access memory (DRAM: Dynamic Random Access Memory), for example. More particularly, the present invention relates to a combination of the memory element (memory cell) having the source potential controlled in the DRAM, and the memory element\n"
      ]
     }
    ],
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stderr",
@@ -233,7 +232,7 @@
      "output_type": "stream",
      "text": [
       "EOS: <eos> | BOS: None | UNK: <unk>\n",
-      "for reasons which include continued enthusiasm for the medium; frustration and frustration in Bernard discard all knowledge that the medium is capable of producing 32 million streams or fizzing advertisements for expensive medium.\n"
+      "Schmidt resigned as president of his own party.\n"
      ]
     }
    ],
