starting to program/train gpt2 from scratch

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -162,6 +162,34 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Train GPT2 from scratch as reference"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Latent Dirichlet Allocation"
    ],
    "metadata": {
