added lm creator and implemented tital removal of wikitext corpus

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -23,6 +23,14 @@
    "source": [
     "# Library imports\n",
     "import numpy as np\n",
+    "import io\n",
+    "import os.path\n",
+    "import logging\n",
+    "import re\n",
+    "import tarfile\n",
+    "import smart_open\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
     "import gc\n",
     "import torch\n",
     "from transformers import set_seed\n",
@@ -48,11 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "source": [
+    "def removing_wikitext_titles(file_name):\n",
+    "    r\"\"\"\n",
+    "    Removing Titles and replacing them with one empty line between each text\n",
+    "\n",
+    "    :param file_name: location of the file with titles\n",
+    "    \"\"\"\n",
+    "    str0 = Path(file_name).read_text(encoding='utf-8')\n",
+    "    heading_pattern = '( \\n [=\\s].*[=\\s] \\n)'\n",
+    "    str1 = re.sub(heading_pattern, '\\n\\n', str0)\n",
+    "    str2 = re.sub('\\n\\n+[\\n]', '\\n\\n', str1)\n",
+    "    new_file_name = file_name+'_no_titles.txt'\n",
+    "    if not os.path.isfile(new_file_name):\n",
+    "        with open(file=new_file_name, mode='x', encoding='utf-8') as file:\n",
+    "            file.write(str2)\n",
+    "    else:\n",
+    "        print(\"ERROR: File already exists. Must be deleted manually.\")\n",
+    "\n",
+    "train = './data/data_wikitext-103-raw/wiki.train.raw'\n",
+    "test = './data/data_wikitext-103-raw/wiki.test.raw'\n",
+    "valid = './data/data_wikitext-103-raw/wiki.valid.raw'\n",
+    "removing_wikitext_titles(train)\n",
+    "removing_wikitext_titles(test)\n",
+    "removing_wikitext_titles(valid)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 5,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def create_corpus(\n",
-    "        model_name=\"openai-gpt\",\n",
+    "        tokenizer_name=\"gpt2\",\n",
+    "        model_name=\"gpt2\",\n",
     "        max_document_length=None,\n",
     "        device=\"cpu\",\n",
     "        corpus_size=1,\n",
@@ -77,19 +122,19 @@
     "            The device the computations commence \"cpu\" or \"cuda\"\n",
     "    \"\"\"\n",
     "\n",
-    "    tokenizer = tokenizer_model.from_pretrained(model_name)\n",
+    "    tokenizer = tokenizer_model.from_pretrained(tokenizer_name)\n",
     "    model = lm_model.from_pretrained(model_name)\n",
     "\n",
     "    max_document_length = max_document_length if max_document_length is not None else tokenizer.model_max_length\n",
     "\n",
-    "    print(f\"EOS: {tokenizer.eos_token} | BOS: {tokenizer.bos_token} | UNK: {tokenizer.unk_token}\")\n",
+    "    # print(f\"EOS: {tokenizer.eos_token} | BOS: {tokenizer.bos_token} | UNK: {tokenizer.unk_token}\")\n",
     "\n",
     "    model = model.to(device)\n",
     "    encoded_output = model.generate(\n",
     "        # all parameters have to be set as otherwise the config of the pretrained model will be taken\n",
     "        input_ids=None,\n",
     "        max_length=max_document_length,\n",
-    "        do_sample=True,\n",
+    "        do_sample=True,                         # False implies Greedy search\n",
     "        early_stopping=False,\n",
     "        num_beams=1,                            # 1 deactivates beam_search\n",
     "        temperature=1.0,                        # 1.0 deactivates temperature\n",
@@ -131,59 +176,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "create_corpus(\"gpt2\", 100, device, 1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EOS: <|endoftext|> | BOS: <|endoftext|> | UNK: <|endoftext|>\n",
+      " of production and could have provided adequate clues to what would work in the wake of the Boston British Revolution, particularly those of the British colonies from the Holy Duustigo and of the 18th century. \n",
+      " Victoria's territorial affairs were strongly dependent on her isolation under the influence of the wealthier counties and Beatty's Lord Benjamin threaten the dominance of those European states on Britain and other land. Throughout her reign, 248 foreign supplies were handed down. Haiti was one of the principal carrier of\n"
+     ]
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "create_corpus(\"EleutherAI/gpt-neo-2.7B\", 100, device, 1)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
    "source": [
-    "### Train GPT2 from scratch as reference"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
-    "\n"
+    "create_corpus(\n",
+    "    tokenizer_name=\"gpt2\",\n",
+    "    model_name=\"./data/model_gpt2-baseline\",\n",
+    "    max_document_length=100,\n",
+    "    device=device,\n",
+    "    corpus_size=1,\n",
+    "    tokenizer_model=GPT2Tokenizer,\n",
+    "    lm_model=GPT2LMHeadModel\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "create_corpus(\n",
+    "    tokenizer_name=\"gpt2\",\n",
+    "    model_name=\"gpt2\",\n",
+    "    max_document_length=100,\n",
+    "    device=device,\n",
+    "    corpus_size=1,\n",
+    "    tokenizer_model=GPT2Tokenizer,\n",
+    "    lm_model=GPT2LMHeadModel\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "create_corpus(\n",
+    "    tokenizer_name=\"EleutherAI/gpt-neo-2.7B\",\n",
+    "    model_name=\"EleutherAI/gpt-neo-2.7B\",\n",
+    "    max_document_length=100,\n",
+    "    device=device,\n",
+    "    corpus_size=1,\n",
+    "    tokenizer_model=GPT2Tokenizer,\n",
+    "    lm_model=GPTNeoForCausalLM\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -201,10 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "outputs": [],
    "source": [
-    "import logging\n",
     "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)"
    ],
    "metadata": {
@@ -216,25 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "outputs": [],
    "source": [
-    "import io\n",
-    "import os.path\n",
-    "import re\n",
-    "import tarfile\n",
-    "\n",
-    "import smart_open\n",
-    "\n",
-    "def extract_documents(url='https://cs.nyu.edu/~roweis/data/nips12raw_str602.tgz'):\n",
-    "    with smart_open.open(url, \"rb\") as file:\n",
-    "        with tarfile.open(fileobj=file) as tar:\n",
-    "            for member in tar.getmembers():\n",
-    "                if member.isfile() and re.search(r'nipstxt/nips\\d+/\\d+\\.txt', member.name):\n",
-    "                    member_bytes = tar.extractfile(member).read()\n",
-    "                    yield member_bytes.decode('utf-8', errors='replace')\n",
-    "\n",
-    "docs = list(extract_documents())"
+    "heading_pattern = '( \\n \\n [=\\s]+.*[=\\s]+ \\n \\n )'\n",
+    "train_data = Path('./data/data_wikitext-103-raw/wiki.train.raw').read_text(encoding='utf-8')\n",
+    "train_split = re.split(heading_pattern, train_data)\n",
+    "train_headings = [x[7:-7] for x in train_split[1::2]]\n",
+    "train_articles = [x for x in train_split[2::2]]"
    ],
    "metadata": {
     "collapsed": false,
@@ -245,30 +305,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1740\n",
-      "387 \n",
-      "Neural Net and Traditional Classifiers  \n",
-      "William Y. Huang and Richard P. Lippmann \n",
-      "MIT Lincoln Laboratory \n",
-      "Lexington, MA 02173, USA \n",
-      "Abstract\n",
-      "Previous work on nets with continuous-valued inputs led to generative \n",
-      "procedures to construct convex decision regions with two-layer percepttons (one hidden \n",
-      "layer) and arbitrary decision regions with three-layer percepttons (two hidden layers). \n",
-      "Here we demonstrate that two-layer perceptton classifiers trained with back propagation \n",
-      "can form both c\n"
-     ]
+     "data": {
+      "text/plain": "'Concept work for Valkyria Chronicles III began after development finished on Valkyria Chronicles II in early 2010 , with full development beginning shortly after this . The director of Valkyria Chronicles II , Takeshi Ozawa , returned to that role for Valkyria Chronicles III . Development work took approximately one year . After the release of Valkyria Chronicles II , the staff took a look at both the popular response for the game and what they wanted to do next for the series . Like its predecessor , Valkyria Chronicles III was developed for PlayStation Portable : this was due to the team wanting to refine the mechanics created for Valkyria Chronicles II , and they had not come up with the \" revolutionary \" idea that would warrant a new entry for the PlayStation 3 . Speaking in an interview , it was stated that the development team considered Valkyria Chronicles III to be the series \\' first true sequel : while Valkyria Chronicles II had required a large amount of trial and error during development due to the platform move , the third game gave them a chance to improve upon the best parts of Valkyria Chronicles II due to being on the same platform . In addition to Sega staff from the previous games , development work was also handled by Media.Vision. The original scenario was written Kazuki Yamanobe , while the script was written by Hiroyuki Fujii , Koichi Majima , Kishiko Miyagi , Seiki Nagakawa and Takayuki Shouji . Its story was darker and more somber than that of its predecessor . \\n The majority of material created for previous games , such as the BLiTZ system and the design of maps , was carried over . Alongside this , improvements were made to the game \\'s graphics and some elements were expanded , such as map layouts , mission structure , and the number of playable units per mission . A part of this upgrade involved creating unique polygon models for each character \\'s body . In order to achieve this , the cooperative elements incorporated into the second game were removed , as they took up a large portion of memory space needed for the improvements . They also adjusted the difficulty settings and ease of play so they could appeal to new players while retaining the essential components of the series \\' gameplay . The newer systems were decided upon early in development . The character designs were done by Raita Honjou , who had worked on the previous Valkyria Chronicles games . When creating the Nameless Squad , Honjou was faced with the same problem he had had during the first game : the military uniforms essentially destroyed character individuality , despite him needing to create unique characters the player could identify while maintaining a sense of reality within the Valkyria Chronicles world . The main color of the Nameless was black . As with the previous Valkyria games , Valkyria Chronicles III used the CANVAS graphics engine . The anime opening was produced by Production I.G.'"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(docs))\n",
-    "print(docs[0][:500])"
+    "train_articles[2]"
    ],
    "metadata": {
     "collapsed": false,
