bugfix score function: not a dictionary but a list of tuples

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -873,11 +873,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "model_pair = (\"lda-wiki_nt-gpt2_nt/wiki_nt\", \"lda-wiki_nt-gpt2_nt/gpt2_nt\")\n",
-    "topic = 100\n",
+    "topic = 5\n",
     "mode = \"union\"\n",
     "path1 = model_pair[0]\n",
     "path2 = model_pair[1]\n",
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "a = ldamodel_1.get_document_topics(list(itertools.chain.from_iterable(corpus_1)), minimum_probability=0.0)"
@@ -924,10 +924,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "b = ldamodel_2.get_document_topics(list(itertools.chain.from_iterable(corpus_2)), minimum_probability=0.0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter\n",
+    "tup = max(b, key=itemgetter(1))[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "int"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tup)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(0, 0.023148753),\n (1, 0.0028030737),\n (2, 0.016371729),\n (3, 0.0014072682),\n (4, 0.0022580405),\n (5, 0.009407448),\n (6, 0.007316898),\n (7, 0.00894459),\n (8, 0.011694404),\n (9, 0.008548111),\n (10, 0.006001778),\n (11, 0.028335033),\n (12, 0.002321526),\n (13, 0.004526338),\n (14, 0.014262614),\n (15, 0.010423615),\n (16, 0.01470411),\n (17, 0.0023821525),\n (18, 0.0020809616),\n (19, 0.012897339),\n (20, 0.010726887),\n (21, 0.0061916686),\n (22, 0.0103839),\n (23, 0.007435687),\n (24, 0.0031629896),\n (25, 0.016836846),\n (26, 0.002798819),\n (27, 0.0020177981),\n (28, 0.011548738),\n (29, 0.0084394),\n (30, 0.011539556),\n (31, 0.0065206145),\n (32, 0.0028019636),\n (33, 0.009506046),\n (34, 0.009114019),\n (35, 0.00586084),\n (36, 0.0104628),\n (37, 0.0050772345),\n (38, 0.003920392),\n (39, 0.0066951495),\n (40, 0.016898306),\n (41, 0.020711036),\n (42, 0.008364165),\n (43, 0.026002608),\n (44, 0.005680909),\n (45, 0.00496998),\n (46, 0.009889519),\n (47, 0.006774921),\n (48, 0.0038970679),\n (49, 0.006484387),\n (50, 0.027740307),\n (51, 0.014414606),\n (52, 0.0048178937),\n (53, 0.0013946799),\n (54, 0.014102748),\n (55, 0.01654683),\n (56, 0.029850544),\n (57, 0.01273114),\n (58, 0.024326751),\n (59, 0.00998628),\n (60, 0.0033111721),\n (61, 0.0026842013),\n (62, 0.004044702),\n (63, 0.012609935),\n (64, 0.006484603),\n (65, 0.026749615),\n (66, 0.0029726266),\n (67, 0.0062902104),\n (68, 0.014521028),\n (69, 0.0019182445),\n (70, 0.0019713046),\n (71, 0.0063996883),\n (72, 0.01757745),\n (73, 0.005192617),\n (74, 0.0071957447),\n (75, 0.014796366),\n (76, 0.005896411),\n (77, 0.0026384585),\n (78, 0.007550672),\n (79, 0.013334626),\n (80, 0.011854834),\n (81, 0.021811888),\n (82, 0.015383605),\n (83, 0.0056268526),\n (84, 0.0137619125),\n (85, 0.0084514525),\n (86, 0.008424602),\n (87, 0.009235152),\n (88, 0.017063877),\n (89, 0.022567343),\n (90, 0.0076382826),\n (91, 0.008954756),\n (92, 0.010472317),\n (93, 0.004415355),\n (94, 0.009582832),\n (95, 0.0037587003),\n (96, 0.008193903),\n (97, 0.0084100915),\n (98, 0.032025684),\n (99, 0.0017650278)]"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ],
    "metadata": {
     "collapsed": false,
